# maier

./: .gitignore  AGENTS.md  Cargo.toml  justfile
engine/: Cargo.toml
engine-py/: pyproject.toml
engine-py/src/engine_py/: __init__.py  state.py
engine/fuzz/: Cargo.toml
engine/fuzz/fuzz_targets/: play_game.rs
engine/src/: state.rs
examples/client/: README.md  pyproject.toml
examples/client/src/bots/: __init__.py  baselines.py  human.py
examples/client/src/client/: __init__.py  baselines.py  human.py  types.py
python/: pyproject.toml
python/src/maier/: __init__.py
python/src/maier/client/: __init__.py  run.py
python/src/maier/engine/: __init__.py
python/src/maier/server/: __init__.py  game.py
python/src/server/: __init__.py  game.py  protocol.py
python/tests/: test_client.py  test_server.py  test_state.py
server/: Cargo.toml
server/fuzz/: Cargo.toml
server/fuzz/fuzz_targets/: play_game.rs
server/src/: action.rs  game.rs  main.rs  protocol.rs  state.rs
