[project]
name = "maier"
version = "0.1.0"
description = "Python implementation of the maier dice game engine, server, and client library"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.19",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[project.scripts]
server = "maier.server:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
