[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "volesen", email = "vincent@volesen.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
client = "client:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
